@startuml
'https://plantuml.com/class-diagram

class TimeSeriesDatum {
    timestamp : boost::gregorian::date
    value : float
}

class DisplayData {
    dailyPredictions : std::vector<DailyPrediction>
    tideData : TideData
}

class DailyPrediction {
    date : boost::gregorian::date
    lunarData : LunarData
    weatherData : AggregateWeatherData
}

class LunarData {
    julianDay : int
    sunPosition : float
    moonPosition : float
    visible : float
    segment : int
}

class TideData {
    highestLevel : float
    lowestLevel : float
    predictions : std::vector<TimeSeriesDatum>
}

class AggregateWeatherData {
    highTemp : float
    lowTemp : float
}

DisplayData "1" o-- "many" DailyPrediction
DailyPrediction *-- LunarData
DisplayData *-- TideData
DailyPrediction *-- AggregateWeatherData
TideData "1" o-- "many" TimeSeriesDatum

@enduml